<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_10sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/blue_button_background"
        >

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/permission_needed"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/notification_permission"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/cancl_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.40"
            android:text="@string/no"
            android:layout_marginVertical="@dimen/_10sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@id/cnfrm_del_btn"
            app:layout_constraintTop_toBottomOf="@id/textView12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/cnfrm_del_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.40"
            android:backgroundTint="@color/splashBgColor"
            android:text="@string/yes"
            android:paddingVertical="@dimen/_10sdp"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/cancl_btn"
            app:layout_constraintStart_toEndOf="@id/cancl_btn"
            app:layout_constraintBottom_toBottomOf="@id/cancl_btn"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
