<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:id="@+id/mainbg">

    <include
        android:id="@+id/top_lay"
        layout="@layout/top_layout_all"/>


    <TextView
        android:id="@+id/goldPasswordId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_30sdp"
        android:fontFamily="@font/thin1"
        android:text="@string/enter_your_pin_code"
        android:textColor="@color/black"
        android:textSize="@dimen/_23ssp"
        app:layout_constraintBottom_toTopOf="@id/allDotLy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/allDotLy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_25sdp"
        app:layout_constraintBottom_toTopOf="@id/goldNum2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/dotGold1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15sdp"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/gold_unfill_dot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/goldDot2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/goldDot2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15sdp"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/gold_unfill_dot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/goldDot3"
            app:layout_constraintStart_toEndOf="@id/dotGold1"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/goldDot3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15sdp"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/gold_unfill_dot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/goldDot4"
            app:layout_constraintStart_toEndOf="@id/goldDot2"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/goldDot4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/gold_unfill_dot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/goldDot3"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/goldNum0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_30sdp"
        android:src="@drawable/bg_dots"
        app:layout_constraintBottom_toTopOf="@+id/nativeExitAd"
        app:layout_constraintStart_toStartOf="@id/goldNum8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/thin1"
        android:includeFontPadding="false"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="@dimen/_29sdp"
        app:layout_constraintBottom_toBottomOf="@id/goldNum0"
        app:layout_constraintEnd_toEndOf="@id/goldNum0"
        app:layout_constraintStart_toStartOf="@id/goldNum0"
        app:layout_constraintTop_toTopOf="@id/goldNum0" />


    <ImageView
        android:id="@+id/goldBackTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_30sdp"
        android:src="@drawable/bg_dots"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/nativeExitAd"
        app:layout_constraintEnd_toEndOf="@id/goldNum9" />

    <TextView
        android:id="@+id/goldBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/black"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@id/goldBackTxt"
        app:layout_constraintEnd_toEndOf="@id/goldBackTxt"
        app:layout_constraintStart_toStartOf="@id/goldBackTxt"
        app:layout_constraintTop_toTopOf="@id/goldBackTxt" />


    <ImageView
        android:id="@+id/goldNum7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:src="@drawable/bg_dots"
        app:layout_constraintBottom_toTopOf="@id/goldNum0"
        app:layout_constraintEnd_toStartOf="@id/goldNum8"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/thin1"
        android:includeFontPadding="false"
        android:text="@string/_7"
        android:textColor="@color/white"
        android:textSize="@dimen/_29sdp"
        app:layout_constraintBottom_toBottomOf="@id/goldNum7"
        app:layout_constraintEnd_toEndOf="@id/goldNum7"
        app:layout_constraintStart_toStartOf="@id/goldNum7"
        app:layout_constraintTop_toTopOf="@id/goldNum7" />

    <ImageView
        android:id="@+id/goldNum8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:src="@drawable/bg_dots"
        app:layout_constraintBottom_toTopOf="@id/goldNum0"
        app:layout_constraintEnd_toStartOf="@id/goldNum9"
        app:layout_constraintStart_toEndOf="@id/goldNum7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/thin1"
        android:includeFontPadding="false"
        android:text="@string/_8"
        android:textColor="@color/white"
        android:textSize="@dimen/_29sdp"
        app:layout_constraintBottom_toBottomOf="@id/goldNum8"
        app:layout_constraintEnd_toEndOf="@id/goldNum8"
        app:layout_constraintStart_toStartOf="@id/goldNum8"
        app:layout_constraintTop_toTopOf="@id/goldNum8" />


    <ImageView
        android:id="@+id/goldNum9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:src="@drawable/bg_dots"
        app:layout_constraintBottom_toTopOf="@id/goldBackTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/goldNum8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/thin1"
        android:includeFontPadding="false"
        android:text="@string/_9"
        android:textColor="@color/white"
        android:textSize="@dimen/_29sdp"
        app:layout_constraintBottom_toBottomOf="@id/goldNum9"
        app:layout_constraintEnd_toEndOf="@id/goldNum9"
        app:layout_constraintStart_toStartOf="@id/goldNum9"
        app:layout_constraintTop_toTopOf="@id/goldNum9" />


    <ImageView
        android:id="@+id/goldNum4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:src="@drawable/bg_dots"
        app:layout_constraintBottom_toTopOf="@id/goldNum7"
        app:layout_constraintEnd_toStartOf="@id/goldNum5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/thin1"
        android:includeFontPadding="false"
        android:text="@string/_4"
        android:textColor="@color/white"
        android:textSize="@dimen/_29sdp"
        app:layout_constraintBottom_toBottomOf="@id/goldNum4"
        app:layout_constraintEnd_toEndOf="@id/goldNum4"
        app:layout_constraintStart_toStartOf="@id/goldNum4"
        app:layout_constraintTop_toTopOf="@id/goldNum4" />

    <ImageView
        android:id="@+id/goldNum5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:src="@drawable/bg_dots"
        app:layout_constraintBottom_toTopOf="@id/goldNum7"
        app:layout_constraintEnd_toStartOf="@id/goldNum6"
        app:layout_constraintStart_toEndOf="@id/goldNum4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/thin1"
        android:includeFontPadding="false"
        android:text="@string/_5"
        android:textColor="@color/white"
        android:textSize="@dimen/_29sdp"
        app:layout_constraintBottom_toBottomOf="@id/goldNum5"
        app:layout_constraintEnd_toEndOf="@id/goldNum5"
        app:layout_constraintStart_toStartOf="@id/goldNum5"
        app:layout_constraintTop_toTopOf="@id/goldNum5" />


    <ImageView
        android:id="@+id/goldNum6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:src="@drawable/bg_dots"
        app:layout_constraintBottom_toTopOf="@id/goldNum9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/goldNum5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/thin1"
        android:includeFontPadding="false"
        android:text="@string/_6"
        android:textColor="@color/white"
        android:textSize="@dimen/_29sdp"
        app:layout_constraintBottom_toBottomOf="@id/goldNum6"
        app:layout_constraintEnd_toEndOf="@id/goldNum6"
        app:layout_constraintStart_toStartOf="@id/goldNum6"
        app:layout_constraintTop_toTopOf="@id/goldNum6" />


    <ImageView
        android:id="@+id/goldNum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:src="@drawable/bg_dots"
        app:layout_constraintBottom_toTopOf="@+id/goldNum4"
        app:layout_constraintEnd_toStartOf="@id/goldNum2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/thin1"
        android:includeFontPadding="false"
        android:text="@string/_1"
        android:textColor="@color/white"
        android:textSize="@dimen/_29sdp"
        app:layout_constraintBottom_toBottomOf="@id/goldNum1"
        app:layout_constraintEnd_toEndOf="@id/goldNum1"
        app:layout_constraintStart_toStartOf="@id/goldNum1"
        app:layout_constraintTop_toTopOf="@id/goldNum1" />

    <ImageView
        android:id="@+id/goldNum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:src="@drawable/bg_dots"
        app:layout_constraintBottom_toTopOf="@id/goldNum4"
        app:layout_constraintEnd_toStartOf="@id/goldNum3"
        app:layout_constraintStart_toEndOf="@id/goldNum1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/thin1"
        android:includeFontPadding="false"
        android:text="@string/_2"
        android:textColor="@color/white"
        android:textSize="@dimen/_29sdp"
        app:layout_constraintBottom_toBottomOf="@id/goldNum2"
        app:layout_constraintEnd_toEndOf="@id/goldNum2"
        app:layout_constraintStart_toStartOf="@id/goldNum2"
        app:layout_constraintTop_toTopOf="@id/goldNum2" />


    <ImageView
        android:id="@+id/goldNum3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:src="@drawable/bg_dots"
        app:layout_constraintBottom_toTopOf="@id/goldNum6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/goldNum2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/thin1"
        android:includeFontPadding="false"
        android:text="@string/_3"
        android:textColor="@color/white"
        android:textSize="@dimen/_29sdp"
        app:layout_constraintBottom_toBottomOf="@id/goldNum3"
        app:layout_constraintEnd_toEndOf="@id/goldNum3"
        app:layout_constraintStart_toStartOf="@id/goldNum3"
        app:layout_constraintTop_toTopOf="@id/goldNum3" />

    <FrameLayout
        android:id="@+id/nativeExitAd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/_50sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/adView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:letterSpacing="0.2"
        android:text="@string/ad"
        android:visibility="invisible"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:background="@drawable/round_btn_ads"
        app:layout_constraintBottom_toBottomOf="@+id/nativeExitAd"
        app:layout_constraintEnd_toEndOf="@+id/nativeExitAd"
        app:layout_constraintStart_toStartOf="@+id/nativeExitAd"
        app:layout_constraintTop_toTopOf="@+id/nativeExitAd" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ads_lay"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:background="@drawable/rect_menu_language"
        android:backgroundTint="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="@dimen/_10sdp"
        >

        <ProgressBar
            android:id="@+id/animation"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintEnd_toEndOf="@id/ads_lay"
            app:layout_constraintStart_toStartOf="@id/ads_lay"
            app:layout_constraintTop_toTopOf="@id/ads_lay"
            app:layout_constraintBottom_toTopOf="@id/warning"
            />

        <TextView
            android:id="@+id/warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:text="@string/loading_ad"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@id/ads_lay"
            app:layout_constraintLeft_toLeftOf="@id/ads_lay"
            app:layout_constraintRight_toRightOf="@id/ads_lay"
            app:layout_constraintTop_toBottomOf="@id/animation"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

