<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:padding="@dimen/_10sdp"
    android:layout_marginHorizontal="@dimen/_20sdp"
    android:background="@drawable/blue_button_background">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:text="@string/animation_speed"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/seekBar"
        />
    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="600"
        android:maxHeight="@dimen/_3sdp"
        android:minHeight="@dimen/_3sdp"
        android:progressDrawable="@drawable/volume_seekbar"
        android:thumbTint="@color/blue_btn_bg_color"
        android:layout_marginVertical="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintBottom_toTopOf="@id/close"
        />

        <Button
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/close"
            android:backgroundTint="@color/blue_btn_bg_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/done"
            />
        <Button
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/apply"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/close"
            app:layout_constraintTop_toTopOf="@+id/close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/close"
            />


</androidx.constraintlayout.widget.ConstraintLayout>
